NTI-10124 - fix alignment of point value input

--- a/src/editor/info/components/PointValue.scss
+++ b/src/editor/info/components/PointValue.scss
@@ -1,10 +1,12 @@
 .point-value {
 	input {
-		height: 22px;
+		height: auto;
+		margin: 0;
+		line-height: 0;
+		max-height: 22px;
 		background-color: white;
 		padding-left: 0;
 		border: none;
-		margin-top: -3px;
 
 		&:focus {
 			border: inherit;
